fix layout issue

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,5 +1,5 @@
 body {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,13 +7,10 @@ body {
 
 .container {
   max-width: 120rem;
+  margin: 8rem auto;
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
   min-height: 50rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
 
   @media only screen and (max-width: $bp-large) {
     margin: 0;
